--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style src='index.css'>
+    <style src='./index.css'>
     </style>
     <title>FIFA 23 Transfer Market Analysis</title>
     
